force-app/main/default/objects/Project_Resource__c/Project_Resource__c.object-meta.xml
<CustomObject>
    <label>Project Resource</label>
    <nameField>
        <displayFormat>Res-{0}</displayFormat>
        <label>Resource Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>