force-app/main/default/objects/Project_Resource__c/fields/Compliance_Hold__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compliance Hold</label>
    <type>Checkbox</type>
</CustomField>