force-app/main/default/objects/Project_Resource__c/fields/Deal_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Deal_Sheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal Sheet</label>
    <referenceTo>Deal_Sheet__c</referenceTo>
    <relationshipLabel>Project Resources</relationshipLabel>
    <relationshipName>Project_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>