force-app/main/default/objects/Project_Resource__c/fields/Next_Timesheet_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Timesheet_Date__c</fullName>
    <inlineHelpText>When next timesheet is due. Auto-updated.</inlineHelpText>
    <label>Next Timesheet Date</label>
    <type>Date</type>
</CustomField>