force-app/main/default/objects/Project_Resource__c/fields/Pay_Rate__c.field-meta.xml
<CustomField>
    <fullName>Pay_Rate__c</fullName>
    <label>Pay Rate</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>