force-app/main/default/objects/Project_Resource__c/fields/Placement__c.field-meta.xml
<CustomField>
    <fullName>Placement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Placement</label>
    <referenceTo>Placement__c</referenceTo>
    <relationshipLabel>Project Resources</relationshipLabel>
    <relationshipName>Project_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>