force-app/main/default/objects/Project_Resource__c/fields/prxm_Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>prxm_Billing_Type__c</fullName>
    <label>Billing Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hourly (Time &amp; Materials)</fullName>
                <default>true</default>
                <label>Hourly (Time &amp; Materials)</label>
            </value>
            <value>
                <fullName>Fixed Fee / Milestone</fullName>
            </value>
            <value>
                <fullName>Internal / Non-Billable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>