force-app/main/default/objects/Project_Resource__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>To know when they actually begin work.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>